<resources>
    <string name="app_name">WeatherApp</string>
    <string name="button_title">Check the weather</string>
    <string name="text_title">Select a city</string>
    <string name="share">Share friends</string>
    <string name="temperature">Temperature</string>
    <string name="pressure">Pressure</string>
    <string name="forecast">Forecast</string>
    <string name="buttonBackText">Back</string>
    <string name="pressure_amount">mmHg</string>
    <string name="forecast_text">Weather forecast:</string>
    <string name="find_weather">Enter the name of the city</string>
    <string name="addCity">Add</string>
    <string name="findLoc">Locate</string>
    <string name="textButtonUpd">Update</string>
    <string name="add_desc">Add a location to the list</string>
    <string name="load_message">Loading…</string>
    <string name="error_load_message">can not add object</string>
    <string name="ok_load_message">Item added</string>
    <string name="clear">Clear</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="about_developers">About</string>
    <string name="feedback">Feedback</string>
    <string name="main_screen">Main screen</string>

</resources>
