<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextCityAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/buttonAdd"
            android:layout_toStartOf="@+id/buttonAdd"
            android:hint="@string/find_weather" />


        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/scrollView2"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/addCity" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/editTextCityAdd">

            <!-- «animateLayoutChanges», равное true.
                 Это говорит о том, что система автоматически
                 анимирует дочерние представления (в данном случае строки) -->
            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:divider="?android:dividerHorizontal"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:showDividers="middle" />

        </ScrollView>
    </RelativeLayout>

    <!-- Вертикальный LinearLayout в ScrollView. Это эмулирует ListView (и имеет более легкий вес
         чем ListView, когда не так много строк). -->


    <!-- должен становится пустым когда элементы добавляются в список -->
    <TextView
        android:id="@android:id/empty"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="32dp"
        android:text="@string/add_desc"
        android:textColor="?android:textColorSecondary" />

</FrameLayout>